# Geant4-CeBr3-Gamma-Detectors

./: 137Cs.mac  152Eu.mac  60Co.mac  CMakeLists.txt  CeBr3Detector.cc  Co60.mac  Cs137.mac  GeneratePlots.C  GetCounts.C  README  SphericalShell.stl  foldGaus-NoZero.C  foldGaus.C  plot.C  vis.mac
include/: ActionGenerator.hh  ActionInitialization.hh  AuxConstructionFunctions.hh  Detector.hh  DetectorAssembly.hh  DetectorBack.hh  DetectorConstruction.hh  DetectorCrystal.hh  DetectorFront.hh  DetectorPMT.hh  DetectorSupport.hh  EventAction.hh  PhysicsList.hh  RunAction.hh  SteppingAction.hh  TrackInformation.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh
macros/: 137Cs.mac  152Eu.mac  60Co.mac  exampleRun.mac  gammaRun.mac  vis.mac
src/: ActionGenerator.cc  ActionInitialization.cc  Detector.cc  DetectorAssembly.cc  DetectorBack.cc  DetectorConstruction.cc  DetectorCrystal.cc  DetectorFront.cc  DetectorPMT.cc  DetectorSupport.cc  EventAction.cc  OldDetector.txt  PhysicsList.cc  RunAction.cc  SteppingAction.cc  TrackInformation.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc
